welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.error
twoAsOne:9: error: not found: value ca
  if (c+b==ca) {
           ^